# optpod

./: .gitignore  Cargo.toml  README.md  optpod_config.toml  result.jsonl
optpod/: a.jsonl  best.jsonl  default.jsonl  prev_best.jsonl  result.jsonl
src/: main.rs  run.rs  setbest.rs  settings.rs  show.rs
tests/: 0000.err  0000.out  0001.err  0001.out  0002.err  0003.err  0003.out  0004.err  0004.out  0005.err  0005.out  0006.err  0006.out  0007.err  0007.out  0008.err  0008.out  0009.err  0009.out  0010.err  0010.out  0011.err  0011.out  0012.err  0012.out  0013.err  0013.out  0014.err  0014.out  0015.err  0015.out  0016.err  0016.out  0017.err  0017.out  0018.err  0018.out  0019.err  0019.out  0020.err  (+179 more)
tests/a/: 0001.err  0001.out  0002.err  0002.out  0003.err  0003.out  0004.err  0004.out  0005.err  0005.out  0006.err  0006.out  0007.err  0007.out  0008.err  0008.out  0009.err  0009.out  0010.err  0010.out
tests/default/: 0001.err  0001.out  0002.err  0003.err  0003.out  0004.err  0004.out  0005.err  0005.out  0006.err  0006.out  0007.err  0007.out  0008.err  0008.out  0009.err  0009.out  0010.err  0010.out  0011.err  0011.out  0012.err  0013.err  0014.err  0014.out  0015.err  0016.err  0017.err  0018.err  0018.out  0019.err  0020.err  0021.err  0022.err  0022.out  0023.err  0023.out  0024.err  0025.err  0026.err  (+129 more)
tests2/default/: 0001.err  0001.out  0002.err  0002.out  0003.err  0004.err  0004.out  0005.err  0005.out  0006.err  0006.out  0007.err  0008.err  0009.err  0009.out  0010.err  0010.out  0011.err  0011.out  0012.err  0012.out  (+112 more)
tools/: do.py  gen.py
(+2 files in other folders)
