[package]
name = "optpod"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.1.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = {version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
